# modules/auth/auth_api.go
@@ -1,11 +1,14 @@
 package auth
 
 import (
+	"fmt"
 	"gogo/common"
 	"gogo/components/appctx"
 	authmodel "gogo/modules/auth/model"
+	authprovidermodel "gogo/modules/auth_provider/model"
 	usermodel "gogo/modules/user/model"
 	"net/http"
+	"net/url"
 
 	"github.com/gin-gonic/gin"
 )
@@ -173,5 +176,71 @@ func ResetPasswordUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
 		}
 
 		ginCtx.JSON(http.StatusOK, common.SuccessResponse(true))
+	}
+}
+
+// GoogleLogin godoc
+// @Summary      Google login
+// @Description  Google login
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        redirect      query     string                                                                                                        false   "redirect"
+// @Success      307
+// @Failure      400   {object}  common.AppError
+// @Router       /api/v1/auth/google/login [get]
+func GoogleLoginUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
+	return func(ginCtx *gin.Context) {
+		var redirect string
+		if err := ginCtx.ShouldBind(&redirect); err != nil {
+			panic(common.ErrorInvalidRequest("redirect", err))
+		}
+		authService := NewAuthServiceFromContext(appCtx)
+		url := authService.GoogleLogin(ginCtx.Request.Context(), redirect)
+		ginCtx.Redirect(http.StatusTemporaryRedirect, url)
+	}
+}
+
+// GoogleCallback godoc
+// @Summary      Google callback
+// @Description  Google callback
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Success      200   {object}  common.Response{data=authmodel.AuthResponse}  "desc"
+// @Failure      400   {object}  common.AppError
+// @Router       /api/v1/auth/google/callback [get]
+func GoogleCallbackUserHandler(appCtx appctx.AppContext) func(*gin.Context) {
+	return func(ginCtx *gin.Context) {
+		var state string = ginCtx.Query("state")
+		var code string = ginCtx.Query("code")
+		ctx := ginCtx.Request.Context()
+
+		authService := NewAuthServiceFromContext(appCtx)
+		key := authService.getCacheKey(ctx, authprovidermodel.GoogleAuthProvider, state)
+		session, err := authService.getSession(ctx, key)
+		if err != nil {
+			panic(common.ErrorInvalidRequest("google auth invalid session", err))
+		}
+
+		redirect := session.(map[string]interface{})["redirect"].(string)
+		redirectUri, err := url.Parse(redirect)
+		if err != nil {
+			panic(common.ErrorInvalidRequest("google auth invalid redirect uri", err))
+		}
+
+		tokenProvider, err := authService.GoogleValidate(ctx, code)
+		if err != nil {
+			panic(common.ErrorInvalidRequest("google auth code", err))
+		}
+
+		q := redirectUri.Query()
+		q.Set("token", tokenProvider.Token)
+		q.Set("expiry", fmt.Sprintf("%d", tokenProvider.Expiry))
+		redirectUri.RawQuery = q.Encode()
+
+		authService.deleteKey(ctx, key)
+
+		ginCtx.JSON(http.StatusOK, redirectUri.RequestURI())
 	}
 }
