# modules/auth/model/forgot_password.go
@@ -1,6 +1,6 @@
 package authmodel
 
 type AuthForgotPassword struct {
-	Email             string `validate:"required,email" json:"email" gorm:"-"`
-	ForgotPasswordUri string `validate:"required" json:"forgotPasswordUri" gorm:"-"`
+	Email             string `validate:"required,email" json:"email"`
+	ForgotPasswordUri string `validate:"required" json:"forgotPasswordUri"`
 }
